# e57-python

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml
src/: lib.rs
testdata/: invalid.e57  justxml.e57  pipeSpherical.e57
tests/: test_e57.py
