[package]
name = "e57-python"
version = "0.1.0-a8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "e57"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.3"
e57 = { version = "0.10.5",features =["crc32c"]}
numpy = "0.20.0"
ndarray = "0.15.6"
