[package]
name = "e57-python"
version = "0.2.0-a1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "e57"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.2"
e57 = { version = "0.11.7",features =["crc32c"]}
numpy = "0.21.0"
ndarray = "0.15.6"
