[package]
name = "e57-python"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "e57"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.3"
e57 = { version = "0.11.12", features = ["crc32c"] }
numpy = "0.28.0"
