[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "e57"
dependencies = [
    'pytest',
    'numpy',
]
description = "Read e57 files to Python. E57 is a compact, non-proprietary point cloud format that's defined by the ASTM E2807 standard. This format is widely adopted by 3D design applications."
authors = [
    { name = "Graham Knapp", email = "graham.knapp@gmail.com" }
]
requires-python = ">=3.7"
keywords = ["pointcloud"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Topic :: File Formats",
]

[project.urls]
repository = "https://github.com/dancergraham/e57-python"


[tool.maturin]
features = ["pyo3/extension-module"]
