[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "e57"
version = "0.2.1a1"
dependencies = [
    'numpy>=2,<3',
]
description = "Read e57 files to Python. E57 is a compact, non-proprietary point cloud format that's defined by the ASTM E2807 standard.  This format is widely adopted by 3D design applications."
authors = [
    { name = "Graham Knapp", email = "graham.knapp@gmail.com" }
]
requires-python = ">=3.10"
keywords = ["pointcloud", "e57", "lidar"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Topic :: File Formats",
]

[project.optional-dependencies]
test = [
    'pytest>=9,<10',
    'pytest-cov>=5,<8',
]

[project.urls]
repository = "https://github.com/dancergraham/e57-python"


[tool.maturin]
features = ["pyo3/extension-module"]
